@@ -628,6 +628,7 @@ class cfgFunctions {
 			addc(v_hd);
 			addc(wa_ace_vec);
 			addc(exectkpd);
+			addc(bv_check);
 		};
 		class Dom_PrePostInit {
 			file = "init";
