@@ -8,13 +8,17 @@ private _uid = getPlayerUID _pl;
 
 if (_reason != -1) then {
 	private _docschat = true;
-	if (_reason == 2) then {
-		diag_log format [localize "STR_DOM_MISSIONSTRING_945", _pl_name, _uid];
-		_docschat = false;
-	} else {
+	call {
+		if (_reason == 2) exitWith {
+			diag_log format [localize "STR_DOM_MISSIONSTRING_945", _pl_name, _uid];
+			_docschat = false;
+		};
 		if (_reason == 3) then {
 			diag_log format [localize "STR_DOM_MISSIONSTRING_946", _pl_name, _uid];
 			_docschat = false;
+		};
+		if (_reason == 99) then {
+			diag_log format [localize "STR_DOM_MISSIONSTRING_2070", _pl_name, _uid];
 		};
 	};
 	_reason remoteExecCall ["d_fnc_emiss", _pl];
